Small fix for issue with height of wrapper around questions loaded on smaller screens or high resolutions

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -161,8 +161,8 @@ body {
     position: relative;
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    padding: 4rem;
+    min-height: 100vh;
+    padding: 6rem 4rem;
 
     &--primary {
         background-color: $backgroundColor;
